# e-market

./: Appliances.cpp  Appliances.h  CMakeLists.txt  Device.cpp  Device.h  DisplayResolution.h  Fridge.cpp  Fridge.h  IElectronics.cpp  IElectronics.h  Mixer.cpp  Mixer.h  Player.cpp  Player.h  Radioset.cpp  Radioset.h  Smartphone.cpp  Smartphone.h  TVset.cpp  TVset.h  main.cpp
